# mai-ir

./: .env  .gitignore  README.md  a.py  docker-compose.yml
task_1/: REPORT.md  load_to_mongo.py  requirements.txt  scrape_articles.py
task_2/: CMakeLists.txt  Dockerfile  README.md  config.yaml
task_2/src/: main.cpp
task_3/: CMakeLists.txt  Dockerfile  README.md  REPORT.md  plot.py  run.sh
task_3/src/: main.c
task_4/: CMakeLists.txt  Dockerfile  README.md  run.sh
task_4/output/: docs.tsv  stats.txt
task_4/src/: indexer.cpp
task_5/: CMakeLists.txt  Dockerfile  README.md
task_5/src/: common.h  search_cli.cpp  web.cpp
task_6/: REPORT.aux  REPORT.fdb_latexmk  REPORT.fls  REPORT.tex  run_all.py
